--- a/hangman.css
+++ b/hangman.css
@@ -1,5 +1,5 @@
 .h5p-hangman {
-  width: 32em;
+  /*width: 32em;*/
   margin: 0 auto;
   border: 1px solid #ccc;
   box-shadow: 2px 2px 4px #ccc;
@@ -35,15 +35,13 @@
 
 #h5p-hangman-alphabeth {
   position:relative;
-  width:20em;
-  height: 20em;
-  min-height:12em;
+  min-height:8em;
   flex:1;
   order:2;
 }
 
 .h5p-hangman-freebok {
-  position:absolute;
+  position: relative;
   display:block;
   color:green;
   width:1.2em;
@@ -51,10 +49,27 @@
   margin: 3px;
   padding:2px;
   font-size:1.2em;
+  float:left;
 }
 
 #h5p-hangman-bokstaver {
   height:2em;
+}
+
+.h5p-hangman-correct {
+  opacity:0;
+  position:absolute;
+  left:1.5em;
+  top:1.5em;
+  font-size:2.5em;
+  color:green;
+  animation: showme 5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes showme {
+  10% { opacity:1;}
+  90% { opacity:1;}
 }
 
 .h5p-hangman-blowy {
@@ -63,17 +78,15 @@
 }
 
 @keyframes blowme {
-  100% {  top:5em; opacity:0; font-size:4em; color:red; }
+  100% {  opacity:0; font-size:4em; color:red; }
 }
 
 .h5p-hangman-droppy {
-  animation: dropme 3s;
-  animation-fill-mode: forwards;
+  animation: dropme 1s;
 }
 
 @keyframes dropme {
-  80% { opacity:0.7;  }
-  100% { top:5em; opacity:0; font-size:3em; }
+  100% { opacity:0; font-size:0; }
 }
 
 .h5p-hangman-bokstav {
