--- a/hangman.css
+++ b/hangman.css
@@ -40,6 +40,15 @@
   order:2;
 }
 
+.h5p-hangman-feedback div {
+  background: darkslategrey;
+  color: white;
+  border-radius: 0.3em;
+  margin: 3px;
+  padding: 2px;
+  box-shadow: 2px 2px 2px rgba(3,3,3,0.3)
+}
+
 .h5p-hangman-freebok {
   position: relative;
   display:block;
