--- a/hangman.css
+++ b/hangman.css
@@ -82,6 +82,7 @@
   border-radius: 0.3em;
   margin: 3px;
   padding: 2px;
+  padding-left: 8px;
   box-shadow: 2px 2px 2px rgba(3,3,3,0.3)
 }
 
@@ -95,6 +96,7 @@
   padding:2px;
   font-size:1.2em;
   float:left;
+  cursor: pointer;
 }
 
 .h5p-hangman-letters {
